--- a/apps/stories/src/Visualization/SortPanel/index.less
+++ b/apps/stories/src/Visualization/SortPanel/index.less
@@ -47,6 +47,7 @@
 
         &.active {
           color: rgb(0, 199, 133);
+          background-color: transparent !important;
         }
       }
 
@@ -82,12 +83,8 @@
         border: 1px solid #666;
         background-color: aquamarine;
 
-        &.active {
-          background-color: rgba(234, 253, 57, 0.3);
-        }
-
         &:hover {
-          background-color: #fff;
+          background-color: #fff !important;
         }
       }
     }
@@ -107,33 +104,71 @@
       border: 1px solid #666;
       background-color: aquamarine;
 
-      &.range {
-        background-color: rgba(234, 253, 57, 0.3);
-      }
-
-      &.range1 {
-        background-color: rgba(255, 52, 52, 0.3);
-      }
-
-      &.range2 {
-        background-color: rgba(128, 5, 139, 0.3);
-      }
-
-      &.pointer1 {
-        background-color: rgb(255, 52, 52);
-      }
-
-      &.pointer2 {
-        background-color: rgb(128, 5, 139);
-      }
-
-      &.pointer3 {
-        background-color: rgb(0, 255, 85);
-      }
-
       &:hover {
-        background-color: #fff;
+        background-color: #fff !important;
       }
     }
+  }
+
+  .info-bar {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+
+    .group {
+      line-height: 12px;
+      font-size: 12px;
+
+      .box {
+        border: 1px solid #666;
+        margin: 0 6px 0 8px;
+        border-radius: 2px;
+        display: inline-block;
+        height: 6px;
+        width: 20px;
+      }
+
+      .text {
+        display: inline-block;
+      }
+
+      &:first-child {
+        .box {
+          margin-left: 0;
+        }
+      }
+    }
+  }
+
+  .range {
+    background-color: rgba(234, 253, 57, 0.3) !important;
+  }
+
+  .range1 {
+    background-color: rgba(255, 52, 52, 0.3) !important;
+  }
+
+  .range2 {
+    background-color: rgba(128, 5, 139, 0.3) !important;
+  }
+
+  .pointer1 {
+    background-color: rgb(255, 52, 52) !important;
+  }
+
+  .pointer2 {
+    background-color: rgb(128, 5, 139) !important;
+  }
+
+  .pointer3 {
+    background-color: rgb(0, 255, 85) !important;
+  }
+
+  .active {
+    background-color: rgba(234, 253, 57, 0.3) !important;
+  }
+
+  .inactive {
+    background-color: #666 !important;
   }
 }
