feat: improve content height

--- a/apps/stories/src/BasePage/index.less
+++ b/apps/stories/src/BasePage/index.less
@@ -5,6 +5,7 @@
   padding: 25px 0 72px;
   position: relative;
   transition: left 0.3s ease, opacity 0.3s linear;
+  min-height: 100vh;
 
   &.hide-left {
     opacity: 0;
