--- a/apps/stories/src/Root.less
+++ b/apps/stories/src/Root.less
@@ -4,6 +4,7 @@
   height: 100vh;
   overflow-x: hidden;
   overflow-y: scroll;
+  scroll-behavior: smooth;
 
   #footer {
     box-sizing: border-box;
