--- a/apps/stories/src/Album/Menu/index.less
+++ b/apps/stories/src/Album/Menu/index.less
@@ -22,7 +22,8 @@
   }
 
   .title {
-    font-weight: 600;
+    font-size: 15px;
+    font-weight: 500;
     margin-right: 8px;
     padding: 6px 0;
     color: rgb(0, 0, 0);
