--- a/apps/stories/src/Visualization/index.less
+++ b/apps/stories/src/Visualization/index.less
@@ -7,7 +7,7 @@
     padding: 6px;
     margin-bottom: 18px;
     background-color: rgba(0, 0, 0, 0.6);
-    align-items: center;
+    align-items: flex-start;
     overflow: hidden;
     transition: height 0.3s ease;
 
@@ -24,14 +24,13 @@
     }
 
     &>.menu {
-      display: flex;
-      flex-wrap: wrap;
+      display: block;
 
       a {
         color: aliceblue;
-        display: block;
+        display: inline-block;
         padding: 6px 8px;
-        margin: 6px;
+        margin: 5px;
         background-color: rgb(29, 28, 49);
         opacity: 0.6;
 
@@ -56,5 +55,13 @@
 
   @media only screen and (max-width: 700px) {
     padding: 6px;
+
+    &>header {
+      margin-bottom: 6px;
+    }
+
+    .source-code-wrap {
+      margin-top: 6px;
+    }
   }
 }
