--- a/apps/stories/src/Visualization/SortPanel/index.less
+++ b/apps/stories/src/Visualization/SortPanel/index.less
@@ -12,7 +12,6 @@
   flex-direction: column;
 
   header {
-    height: 25px;
     line-height: 25px;
     display: flex;
     justify-content: center;
@@ -62,7 +61,7 @@
 
     .delay {
       input {
-        width: 66px;
+        width: 50px;
       }
     }
   }
@@ -126,6 +125,10 @@
         display: inline-block;
         height: 6px;
         width: 20px;
+
+        @media only screen and (max-width: 700px) {
+          margin-left: 0;
+        }
       }
 
       .text {
