--- a/apps/stories/src/Header/index.less
+++ b/apps/stories/src/Header/index.less
@@ -96,6 +96,7 @@
       font-size: 12px;
       text-decoration: none;
       display: block;
+      transition: opacity 0.2s ease;
 
       &:first-child {
         margin-left: 0;
@@ -111,7 +112,7 @@
         position: absolute;
         bottom: 0;
         left: 50%;
-        transition: left 0.2s ease, width 0.2s ease, opacity 0.2s ease;
+        transition: left 0.2s ease, width 0.2s ease;
       }
 
       &:hover {
