feat: add font, change header style, socket.io https, improve redirect logic, a few improvements

--- a/apps/common/src/styles/index.less
+++ b/apps/common/src/styles/index.less
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: 'youran';
+  font-size: 30px;
+  src: url("/@resources/static/font/youran.ttf") format('truetype');
+}
+
 html, body {
   width: 100%;
   position: relative;
@@ -7,7 +13,7 @@ html, body {
 
 html {
   font-size: 16px;
-  font-family: 'Times New Roman', Times, serif, '宋体', SimSum;
+  font-family: 'Times New Roman', Times, serif, 'NSimSun', SimSum;
 }
 
 h1, h2, h3 {
