--- a/apps/stories/src/Header/index.less
+++ b/apps/stories/src/Header/index.less
@@ -12,14 +12,11 @@
   }
 }
 
-.info {
+#blog-header {
   position: relative;
   box-sizing: border-box;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 32px 36px 0;
-  background-image: url('@resources/static/materials/header_background.jpg');
-  background-size: cover;
 
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -28,22 +25,11 @@
   -ms-user-select: none;
   user-select: none;
 
-  @media only screen and (max-width: 700px) {
-    padding: 25px 6px 0;
-
-    span {
-      display: none;
-    }
-  }
-
-  .main {
-    position: absolute;
-    left: 12px;
-    top: 8px;
-
-    img {
-      width: 30px;
-    }
+  .content {
+    width: 100%;
+    padding: 56px 0 66px;
+    background-image: url('@resources/static/materials/header_background.jpg');
+    background-size: cover;
   }
 
   .profile {
@@ -69,7 +55,7 @@
 
   p {
     font-size: 12px;
-    margin: 16px auto 32px;
+    margin: 16px auto 0;
     color: rgba(255, 255, 255, 0.7);
     text-align: center;
     background: linear-gradient(-30deg, rgba(255, 255, 255, 0) 50px, rgba(255, 255, 255, 1) 90px, rgba(255, 255, 255, 1) 140px, rgba(255, 255, 255, 0) 180px) -400px 0px no-repeat;
@@ -79,57 +65,106 @@
     animation: shine 6s infinite ease;
   }
 
+  h3 {
+    font-family: 'youran';
+    font-size: 20px;
+    font-weight: 100;
+    color: rgba(255, 255, 255, 0.7);
+    text-align: center;
+    margin: 0;
+  }
+
   nav {
-    margin-top: 36px;
+    background-color: rgba(0, 66, 97, 0.6);
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    padding: 6px 18px 0;
+    transition: background-color 0.3s ease;
 
-    .nav {
-      text-align: center;
-      cursor: pointer;
-      line-height: 16px;
-      padding-bottom: 3px;
-      opacity: 0.3;
-      margin: 0 18px;
-      color: rgb(255, 255, 255);
-      position: relative;
-      font-size: 12px;
-      text-decoration: none;
-      display: block;
-      transition: opacity 0.2s ease;
-
-      &:first-child {
-        margin-left: 0;
+    .main {
+      margin-right: 8px;
+      img {
+        width: 26px;
       }
-      &:last-child {
-        margin-right: 0;
-      }
+    }
 
-      .underline {
-        width: 0;
-        height: 1px;
-        background-color: rgb(255, 255, 255);
-        position: absolute;
-        bottom: 0;
-        left: 50%;
-        transition: left 0.2s ease, width 0.2s ease;
-      }
+    .links {
+      display: flex;
+      align-items: flex-end;
 
-      &:hover {
-        opacity: 1;
+      .nav {
+        text-align: center;
+        cursor: pointer;
+        line-height: 12px;
+        padding-bottom: 3px;
+        opacity: 0.3;
+        margin: 0 18px;
+        color: rgb(255, 255, 255);
+        position: relative;
+        font-size: 12px;
+        text-decoration: none;
+        display: block;
+        transition: opacity 0.2s ease;
+
+        &:first-child {
+          margin-left: 0;
+        }
+
+        &:last-child {
+          margin-right: 0;
+        }
 
         .underline {
-          width: 100%;
-          left: 0;
+          width: 0;
+          height: 1px;
+          background-color: rgb(255, 255, 255);
+          position: absolute;
+          bottom: 0;
+          left: 50%;
+          transition: left 0.2s ease, width 0.2s ease;
+        }
+
+        &:hover {
+          opacity: 1;
+
+          .underline {
+            width: 100%;
+            left: 0;
+          }
+        }
+
+        &.active {
+          opacity: 1;
+
+          .underline {
+            width: 100%;
+            left: 0;
+          }
         }
       }
+    }
+  }
 
-      &.active {
-        opacity: 1;
+  @media only screen and (max-width: 700px) {
+    .content {
+      padding: 25px 0 25px;
+    }
 
-        .underline {
-          width: 100%;
-          left: 0;
+    span {
+      display: block;
+      margin-bottom: 3px;
+    }
+
+    .dot {
+      display: none;
+    }
+
+    nav {
+      padding: 10px 6px 0;
+
+      .links {
+        .nav {
+          margin: 0 6px;
         }
       }
     }
