feat: integrate fontmine conpress functionality

--- a/apps/common/src/styles/index.less
+++ b/apps/common/src/styles/index.less
@@ -1,7 +1,8 @@
 @font-face {
   font-family: 'youran';
   font-size: 30px;
-  src: url("/@resources/static/font/youran.ttf") format('truetype');
+  src: url('/@resources/static/font/dist/youran.eot');
+  src: url("/@resources/static/font/dist/youran.ttf") format('truetype'), url('/@resources/static/font/dist/youran.woff') format('woff');
 }
 
 html, body {
