--- a/apps/stories/src/Album/index.less
+++ b/apps/stories/src/Album/index.less
@@ -1,6 +1,7 @@
 .album {
   background-color: rgba(109, 0, 0, 0.6);
-  padding-top: 8px;
+  padding: 8px 6px 0;
+  box-sizing: border-box;
 
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -16,11 +17,8 @@
   }
 
   footer {
-    position: absolute;
     width: 100%;
-    left: 0;
-    bottom: 0;
-    padding-bottom: 36px;
+    padding: 0 0 36px;
     display: flex;
     justify-content: center;
 
