feat: style improvements

--- a/apps/stories/src/BasePage/index.less
+++ b/apps/stories/src/BasePage/index.less
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 25px 0 72px;
+  padding: 18px;
   position: relative;
   transition: left 0.3s ease, opacity 0.3s linear;
   min-height: 100vh;
