feat: style improvements

--- a/apps/stories/src/Header/index.less
+++ b/apps/stories/src/Header/index.less
@@ -13,6 +13,7 @@
 }
 
 #blog-header {
+  font-family: 'youran', cursive;
   position: relative;
   box-sizing: border-box;
   max-width: 1200px;
@@ -54,6 +55,7 @@
   }
 
   p {
+    font-family: fantasy;
     font-size: 12px;
     margin: 16px auto 0;
     color: rgba(255, 255, 255, 0.7);
@@ -78,7 +80,7 @@
     background-color: rgba(0, 66, 97, 0.6);
     display: flex;
     justify-content: space-between;
-    padding: 6px 18px 0;
+    padding: 66px 18px 0;
     transition: background-color 0.3s ease;
 
     .main {
@@ -112,6 +114,10 @@
 
         &:last-child {
           margin-right: 0;
+        }
+
+        .ch {
+          font-size: 21px;
         }
 
         .underline {
@@ -160,7 +166,7 @@
     }
 
     nav {
-      padding: 10px 6px 0;
+      padding: 16px 6px 0;
 
       .links {
         .nav {
