--- a/apps/stories/src/utils/SourceCode/index.less
+++ b/apps/stories/src/utils/SourceCode/index.less
@@ -4,7 +4,7 @@
 
   .header {
     margin-bottom: 16px;
-    border-bottom: 1px solid #666;
+    border-bottom: 1px solid #eee;
 
     -webkit-touch-callout: none;
     -webkit-user-select: none;
