--- a/apps/stories/src/Header/index.less
+++ b/apps/stories/src/Header/index.less
@@ -65,6 +65,10 @@
     background-clip: text;
     -webkit-background-clip: text;
     animation: shine 6s infinite ease;
+
+    @media only screen and (max-width: 700px) {
+      animation: shine 9s infinite ease;
+    }
   }
 
   h3 {
