--- a/apps/stories/src/Root.less
+++ b/apps/stories/src/Root.less
@@ -18,6 +18,10 @@
     a {
       color: rgba(255, 255, 255, 0.8);
       text-decoration: none;
+
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 
