feat: change scrollbar style

--- a/apps/common/src/styles/index.less
+++ b/apps/common/src/styles/index.less
@@ -54,7 +54,7 @@ a {
   ::-webkit-scrollbar {
     width: 8px;
     height: 8px;
-    background: rgba(245, 245, 245, 0.5);
+    background: transparent;
   }
   
   ::-webkit-scrollbar-track {
