--- a/apps/common/src/styles/index.less
+++ b/apps/common/src/styles/index.less
@@ -40,6 +40,10 @@ a {
   cursor: pointer;
   color: inherit;
   text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 @media only screen and (min-width: 700px) {
