--- a/apps/stories/src/Visualization/index.less
+++ b/apps/stories/src/Visualization/index.less
@@ -37,6 +37,7 @@
           transition: background-color 0.2s ease, color 0.2s ease;
           background-color: aliceblue;
           color: rgb(29, 28, 49);
+          text-decoration: none;
         }
 
         &.active {
