feat: improve source code style

--- a/apps/stories/src/utils/SourceCode/index.less
+++ b/apps/stories/src/utils/SourceCode/index.less
@@ -3,11 +3,13 @@
   color: #fff;
 
   &.fullscreen {
-    background-color: rgb(46, 46, 46);
+    background-color: #000;
     padding: 6px;
 
-    code {
-
+    .code {
+      background-color: #282c34;
+      padding: 3px;
+      box-sizing: border-box;
     }
   }
 
