--- a/apps/test/src/styles/main.less
+++ b/apps/test/src/styles/main.less
@@ -4,4 +4,18 @@ html, body {
   margin: 0;
   padding: 0;
   overflow: hidden;
+
+  .buttons {
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+
+    .btn {
+      margin: 0 16px;
+      cursor: pointer;
+    }
+  }
 }
