--- a/apps/test/src/styles/main.less
+++ b/apps/test/src/styles/main.less
@@ -16,6 +16,16 @@ html, body {
     .btn {
       margin: 0 16px;
       cursor: pointer;
+
+      &:hover {
+        opacity: 0.8;
+        text-decoration: underline;
+      }
+
+      &.active {
+        opacity: 0.8;
+        text-decoration: underline;
+      }
     }
   }
 }
