feat: ray march into polygon

--- a/apps/test/src/styles/main.less
+++ b/apps/test/src/styles/main.less
@@ -12,6 +12,7 @@ html, body {
     position: fixed;
     display: flex;
     justify-content: center;
+    color: lightskyblue;
 
     .btn {
       margin: 0 16px;
@@ -27,5 +28,13 @@ html, body {
         text-decoration: underline;
       }
     }
+  }
+
+  #info {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 16px;
+    color: coral;
   }
 }
